Comment reply spacing and style fixes

--- a/style.css
+++ b/style.css
@@ -2085,12 +2085,17 @@ a {
   font-size: 16px;
   margin-bottom: 0; }
 
+.comment-respond {
+  margin-top: 30px; }
+
 .comment-reply-title {
   margin-bottom: 15px; }
   .comment-reply-title #cancel-comment-reply-link {
     color: #828282;
+    font-family: "Open Sans", sans-serif;
     font-size: 13px;
-    margin-left: .25em; }
+    margin-left: .5em;
+    text-transform: none; }
     .comment-reply-title #cancel-comment-reply-link:hover {
       color: #4d8ffb; }
 
